--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.29.0"
+    "react-router-dom": "^6.30.0",
+    "react-simple-captcha": "^9.3.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.8",
